# rustic

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/compiler/: ast.rs  lexer.rs  mod.rs
