[package]
name = "rustic"
version = "0.1.0"
edition = "2021"
authors = ["Rustic Team"]
description = "Rustic programming language compiler"

[[bin]]
name = "rustic"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ['derive'] }
thiserror = "1.0"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
walkdir = "2.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
